<resources>
    <string name="app_name">PiggyBank</string>
    <string name="string_email">ایمیل</string>
    <string name="string_password">رمز عبور</string>
    <string name="string_login">ورود</string>
    <string name="string_forgot_password">فراموشی رمز</string>
    <string name="string_sign_up">ثبت نام</string>
    <string name="string_welcom">خوش آمدید</string>
    <string name="string_repeat_password">تکرار رمز عبور</string>
    <string name="string_month"> ماه   </string>
    <string name="string_income">درامد : 0 تومان</string>
    <string name="string_expense">خرج : 0 تومان</string>
    <string name="string_new_income">درامد جدید</string>
    <string name="string_new_expense">هزینه جدید</string>
    <string name="string_balance">0 تومان   \n  بودجه</string>
    <string name="string_amount">مقدار</string>
    <string name="string_type">نوع</string>
    <string name="string_color">رنگ</string>
    <string name="string_recent_income">آخرین درامدها</string>
    <string name="string_recent_expense">آخرین هزینه ها</string>
    <string name="string_recent_reminder">آخرین یاداوری ها</string>
    <string name="string_new_reminder">یاداوری</string>
    <string name="string_title">عنوان</string>
    <string name="string_date">تاریخ</string>
    <string name="string_description">توضیح</string>
    <string name="string_picking_color">انتخاب رنگ</string>
    <string name="string_accept">تایید</string>
    <string name="string_reject">انصراف</string>
    <string name="pie_chart">نمدار دایره ای</string>
    <string name="string_total_incomes">مشاهده همه هزینه ها</string>
    <string name="string_total_costs">مشاهده همه درامد ها</string>
    <string name="string_most_expense">بیشترین هزینه</string>
    <string name="string_add_reminder">اضافه کردن یاداوری</string>
</resources>