<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="2.75"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/normal_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:elevation="@dimen/large_margin"
        app:cardCornerRadius="@dimen/xlarge_margin"
        android:layout_weight="1.75">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:weightSum="1.75"
            android:layout_height="match_parent">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="0.75"
    android:textColor="@color/brown_box"
    android:textSize="@dimen/title"
    android:padding="@dimen/large_padding"
    android:text="@string/string_balance"
    android:layout_gravity="center"
    android:id="@+id/balance"
    android:layout_margin="@dimen/normal_margin"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:textColor="@color/brown_box"
        android:textSize="@dimen/text_size"
        android:id="@+id/month"
        android:padding="@dimen/large_padding"
        android:text="@string/string_month"
        android:layout_gravity="right"
        android:layout_margin="@dimen/normal_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/brown_box"
        android:textSize="@dimen/text_size"
        android:layout_weight="0.25"
        android:id="@+id/expense"
        android:padding="@dimen/large_padding"
        android:text="@string/string_expense"
        android:layout_gravity="right"
        android:layout_margin="@dimen/normal_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/brown_box"
        android:layout_weight="0.25"
        android:textSize="@dimen/text_size"
        android:id="@+id/income"
        android:padding="@dimen/large_padding"
        android:text="@string/string_income"
        android:layout_gravity="right"
        android:layout_margin="@dimen/normal_margin"
        />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_margin="@dimen/normal_margin"
        android:orientation="horizontal">
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        app:iconTint="@color/brown_box"
        app:backgroundTint="@color/colorAccentWithOpacity"
        android:elevation="@dimen/cardview_default_elevation"
        android:padding="@dimen/large_padding"
        android:text="@string/string_new_income"
        android:textColor="@color/brown_box"
        android:layout_gravity="center"
        app:icon="@drawable/add"
        android:id="@+id/new_income"
        android:layout_margin="@dimen/large_margin"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            app:backgroundTint="@color/colorAccentWithOpacity"
            app:iconTint="@color/brown_box"
            android:elevation="@dimen/cardview_default_elevation"
            android:padding="@dimen/large_padding"
            android:text="@string/string_new_expense"
            android:textColor="@color/brown_box"
            android:layout_gravity="center"
            app:icon="@drawable/add"
            android:id="@+id/new_expense"
            android:layout_margin="@dimen/large_margin"/>


    </LinearLayout>
</LinearLayout>