<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<com.google.android.material.card.MaterialCardView
    android:layout_width="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/normal_margin"
    android:layout_margin="@dimen/normal_margin"
    app:cardElevation="@dimen/normal_margin"
    android:backgroundTint="@color/colorAccent"
    android:id="@+id/task_item"
    android:layout_height="100dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/task_date"
            android:text="@string/string_date"
            android:textColor="@color/brown_box"
            android:textSize="@dimen/text_size"/>


        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/string_title"
            android:textColor="@color/colorPrimaryDarkWithOpacity"
            android:textSize="@dimen/text_size"
            />
        <TextView
            android:id="@+id/task_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/string_amount"
            android:textColor="@color/brown_box_with_opacity"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
</layout>