<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="clickHandler"
            type="com.example.piggybank.view.ReportFragment.AddAndEditActivityClickHandlers" />
    </data>
<androidx.core.widget.NestedScrollView

    android:layout_width="match_parent"
    android:background="@color/colorPrimaryWithOpacity"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="@dimen/large_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Switch
            android:layout_width="wrap_content"
            android:textColor="@color/brown_box"
            android:buttonTint="@color/colorAccent"
            android:text="@string/string_month"
            android:checked="true"
            android:layout_height="wrap_content"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            app:cardElevation="@dimen/normal_margin"
            app:cardCornerRadius="@dimen/normal_margin"
            android:layout_height="wrap_content">
     <com.github.mikephil.charting.charts.PieChart
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:id="@+id/monthly_pie_Chart"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            app:cardElevation="@dimen/normal_margin"
            app:cardCornerRadius="@dimen/normal_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="vertical">
                <TextView
                    android:padding="@dimen/large_padding"
                    android:layout_width="match_parent"
                    android:id="@+id/report_date"
                    android:text="@string/string_date"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:padding="@dimen/large_padding"
                    android:layout_width="match_parent"
                    android:text="@string/string_most_expense"
                    android:layoutDirection="rtl"
                    android:id="@+id/report_most_cost"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:padding="@dimen/large_padding"
                    android:layout_width="match_parent"
                    android:text="@string/string_income"
                    android:id="@+id/report_daily_income"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:cardElevation="@dimen/normal_margin"
        app:cardCornerRadius="@dimen/normal_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical">
      <TextView
          android:padding="@dimen/large_padding"
          android:layout_width="match_parent"
          android:text="@string/string_month"
          android:id="@+id/report_month"
          android:layout_height="wrap_content"/>
        <TextView
            android:padding="@dimen/large_padding"
            android:layout_width="match_parent"
            android:text="@string/string_expense"
            android:id="@+id/report_cost"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="@dimen/large_padding"
            android:layout_width="match_parent"
            android:text="@string/string_income"
            android:id="@+id/report_income"
            android:layout_height="wrap_content"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/large_margin"
            app:cardCornerRadius="@dimen/normal_margin"
            app:cardElevation="@dimen/normal_margin"
            android:onClick="@{clickHandler::onButtonClicked}"
            android:id="@+id/list_costs"
            android:clickable="true"
            android:layoutDirection="ltr"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/clothes"
                android:padding="@dimen/large_padding"/>
            <TextView
                android:padding="@dimen/large_padding"
                android:layout_width="match_parent"
                android:text="@string/string_total_incomes"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            app:cardElevation="@dimen/normal_margin"
            app:cardCornerRadius="@dimen/normal_margin"
            android:layoutDirection="ltr"
            android:id="@+id/list_incomes"
            android:clickable="true"
            android:onClick="@{clickHandler::onButtonClicked}"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/income"
                android:padding="@dimen/large_padding"/>
            <TextView
                android:padding="@dimen/large_padding"
                android:layout_width="match_parent"
                android:text="@string/string_total_costs"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</layout>
