<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:elevation="@dimen/normal_margin"
    android:gravity="center_horizontal"
    android:padding="@dimen/large_padding"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/brown_box"
        android:textSize="@dimen/title"
        android:padding="@dimen/large_padding"
        android:text="@string/string_new_reminder"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:padding="@dimen/large_padding"
        android:layout_margin="@dimen/normal_margin"
        android:layout_gravity="center_horizontal"
        android:weightSum="3"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/string_title"
            android:padding="@dimen/large_padding"
            android:textColor="@color/colorAccent"/>
        <EditText
            android:layout_width="0dp"
            android:id="@+id/amount_expense"
            android:textColor="@color/brown_box"
            android:layout_height="wrap_content"
            android:layout_weight=".5"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:weightSum="3"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/large_padding"
        android:layout_margin="@dimen/normal_margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/string_date"
            android:padding="@dimen/large_padding"
            android:textColor="@color/colorAccent"/>
        <ImageView
            android:layout_width="0dp"
            android:src="@drawable/calender"
            android:padding="@dimen/large_padding"
            android:scaleType="fitXY"
            android:clickable="true"
            android:id="@+id/type_picker"
            android:contextClickable="true"
            android:layout_height="wrap_content"
            android:layout_weight=".3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:weightSum="3"
        android:padding="@dimen/large_padding"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/normal_margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/string_description"
            android:padding="@dimen/large_padding"
            android:textColor="@color/colorAccent"/>
        <EditText
            android:layout_width="0dp"
            android:maxLength="2"
            android:textColor="@color/brown_box"
            android:layout_height="wrap_content"
            android:lines="2"
            android:id="@+id/color_picker"
            android:layout_weight="2.2"/>
    </LinearLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/save"
        android:layout_margin="@dimen/large_margin"
        android:layout_gravity="center"
        />
</LinearLayout>