<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="trans"
            type="com.example.piggybank.model.Transaction" />
        <variable
            name="clickHandler"
            type="com.example.piggybank.view.NewItemFragment.AddAndEditTransactionClickHandlers" />
    </data>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:elevation="@dimen/normal_margin"
    android:gravity="center_horizontal"
    android:padding="@dimen/large_padding"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:layout_height="match_parent">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textColor="@color/brown_box"
       android:textSize="@dimen/title"
       android:padding="@dimen/large_padding"
       style="@style/TextAppearance.AppCompat.Headline"
       android:text="@string/string_picking_color"
       android:gravity="center_horizontal"
       android:id="@+id/picker_tv"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:padding="@dimen/large_padding"
        android:background="@drawable/rectangles"
        android:layout_margin="@dimen/normal_margin"
        android:layout_gravity="center_horizontal"
        android:weightSum="3"
        android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/string_amount"
        android:padding="@dimen/large_padding"
        android:textColor="@color/colorAccent"/>
        <EditText
            android:layout_width="0dp"
            android:id="@+id/amount_item"
            android:textColor="@color/brown_box"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:weightSum="3"
        android:background="@drawable/rectangles"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/large_padding"
        android:layout_margin="@dimen/normal_margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/string_type"
            android:padding="@dimen/large_padding"
            android:textColor="@color/colorAccent"/>
        <ImageView
            android:layout_width="0dp"
            android:src="@drawable/clothes"
            android:scaleType="fitXY"
            android:clickable="true"
            android:id="@+id/icon_picker"
            android:layout_height="wrap_content"
            android:layout_weight=".3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:weightSum="3"
        android:background="@drawable/rectangles"
        android:padding="@dimen/large_padding"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/normal_margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/string_color"
            android:padding="@dimen/large_padding"
            android:textColor="@color/colorAccent"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/color_picker"
            android:layout_weight=".3"/>
    </LinearLayout>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/saveitems"
        android:backgroundTint="@color/cardview_light_background"
        android:layout_margin="@dimen/normal_margin"
        android:id="@+id/save_item"
        android:clickable="true"
        android:layout_gravity="center"
        android:onClick="@{clickHandler::onAddButtonClicked}"
        />
</LinearLayout>
</layout>