<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingTop="50dp"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    android:weightSum="16"
    tools:context=".Login.SignUp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/normal_margin"
            android:src="@drawable/walletlogo"
            android:background="@drawable/circle"/>
    </LinearLayout>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8.5"
        android:layout_marginTop="25dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="40dp"
        android:padding="@dimen/large_padding"
        android:layout_gravity="center"
        android:elevation="10dp"
        app:cardCornerRadius="@dimen/xlarge_margin"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/xlarge_margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/string_email"
                android:layout_gravity="right"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="@dimen/normal_margin"
                android:paddingRight="@dimen/large_padding"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/editStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/hint_style"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/large_padding"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/text_size" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/string_password"
                android:layout_gravity="right"
                android:textColor="@color/colorPrimaryDark"
                android:paddingRight="@dimen/large_padding"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/editStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/hint_style"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:padding="@dimen/large_padding"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/text_size" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/string_repeat_password"
                android:layout_gravity="right"
                android:textColor="@color/colorPrimaryDark"
                android:paddingRight="@dimen/large_padding"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/editStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/hint_style"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:padding="@dimen/large_padding"
                    android:singleLine="true"
                    android:layout_marginBottom="@dimen/large_margin"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:backgroundTint="@color/brown_box"
                android:layout_marginLeft="@dimen/xlarge_margin"
                android:layout_marginRight="@dimen/xlarge_margin"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/large_padding"
                android:text="@string/string_sign_up"
                android:textStyle="bold" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>